feat: Enhance authentication and security configuration